--- a/css/estilos.css
+++ b/css/estilos.css
@@ -44,8 +44,7 @@ body{
     }
     .Nav-img{
 
-
-       aspect-ratio: 1/1; 
+       aspect-ratio: auto; 
       object-fit: cover;
       
         
@@ -69,20 +68,18 @@ body{
     
     }
     
-    .Nav-div{
+    .Nav-a{
         display: flex;
         font-size: small;
         font-weight: bold;
-        object-fit: cover;
+        text-decoration: none;
+        color: black;
     }
 
-.Nav-div1{
+.Nav-a1{
     text-decoration: underline;
    
 }
-
-
-
 
 
     
@@ -120,26 +117,14 @@ body{
 
 .Galeria{
     width: 100%;
-    height: 70%;
-    padding: 0 3%;
-    justify-content: center;
-    align-content: center;
-    
-    
-    
+    height: auto;
     display: grid;
+    padding: 0 3%;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(3, 1fr);
     grid-gap: 1%;
-    
-    grid-template-areas: "Galeria-img1 Galeria-img2 Galeria-img3 Galeria-img4"
-                         "Galeria-img5 Galeria-img6 Galeria-img7 Galeria-img8"
-                         "Galeria-img9 Galeria-img10 Galeria-img11 Galeria-img12"
-                         ;
-
     justify-content:center;
     align-content: center;
-
     grid-auto-flow: row;
     grid-auto-rows: 320px;
     grid-auto-columns: 200px;
@@ -147,58 +132,11 @@ body{
 }
 
 .Galeria-img{
-    aspect-ratio: 1/1; 
+    aspect-ratio: auto; 
      width: 100%;
+
     
     
-}
-
-.Galeria-img1{
-    grid-area: Galeria-img1;
-}
-
-.Galeria-img2{
-    grid-area: Galeria-img2;
-}
-
-.Galeria-img3{
-    grid-area: Galeria-img3;
-}
-
-.Galeria-img4{
-    grid-area: Galeria-img4;
-}
-
-.Galeria-img5{
-    grid-area: Galeria-img5;
-}
-
-.Galeria-img6{
-    grid-area: Galeria-img6;
-}
-
-.Galeria-img7{
-    grid-area: Galeria-img7;
-}
-
-.Galeria-img8{
-    grid-area: Galeria-img8;
-}
-
-.Galeria-img9{
-    grid-area: Galeria-img9;
-}
-
-.Galeria-img10{
-    grid-area: Galeria-img10;
-}
-
-.Galeria-img11{
-    grid-area: Galeria-img11;
-}
-
-.Galeria-img12{
-    grid-area: Galeria-img12;
 }
 
 
